crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_filter_catalog_name.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "inSet": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/private/capture",
          "userCapability": "admin"
        }
      },
      {
        "node": {
          "catalogName": "aliceCo/shared/a",
          "userCapability": "admin"
        }
      }
    ]
  },
  "startsWith": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/shared/a",
          "userCapability": "admin"
        }
      },
      {
        "node": {
          "catalogName": "aliceCo/shared/b",
          "userCapability": "admin"
        }
      },
      {
        "node": {
          "catalogName": "aliceCo/shared/c",
          "userCapability": "admin"
        }
      },
      {
        "node": {
          "catalogName": "aliceCo/shared/capture",
          "userCapability": "admin"
        }
      },
      {
        "node": {
          "catalogName": "aliceCo/shared/disabled",
          "userCapability": "admin"
        }
      },
      {
        "node": {
          "catalogName": "aliceCo/shared/materialize",
          "userCapability": "admin"
        }
      }
    ]
  }
}
