crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_pagination_cursor.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "cursor": "aliceCo/shared/b",
        "node": {
          "catalogName": "aliceCo/shared/b",
          "userCapability": "admin"
        }
      },
      {
        "cursor": "aliceCo/shared/c",
        "node": {
          "catalogName": "aliceCo/shared/c",
          "userCapability": "admin"
        }
      }
    ],
    "pageInfo": {
      "hasNextPage": true,
      "hasPreviousPage": true
    }
  }
}
