crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_pagination_cursor_beyond_end.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "liveSpecs": {
    "edges": [],
    "pageInfo": {
      "hasNextPage": false,
      "hasPreviousPage": false
    }
  }
}
