crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-prefixes.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "prefixes": {
    "edges": [
      {
        "cursor": "aliceCo/",
        "node": {}
      },
      {
        "cursor": "ops/dp/public/",
        "node": {}
      }
    ]
  }
}
