crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_basic.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
{
  "allTypes": {
    "edges": [
      {
        "cursor": "aliceCo/shared/a",
        "node": {
          "catalogName": "aliceCo/shared/a",
          "liveSpec": {
            "catalogType": "collection"
          },
          "userCapability": "read"
        }
      },
      {
        "cursor": "aliceCo/shared/b",
        "node": {
          "catalogName": "aliceCo/shared/b",
          "liveSpec": {
            "catalogType": "collection"
          },
          "userCapability": "read"
        }
      },
      {
        "cursor": "aliceCo/shared/c",
        "node": {
          "catalogName": "aliceCo/shared/c",
          "liveSpec": {
            "catalogType": "collection"
          },
          "userCapability": "read"
        }
      },
      {
        "cursor": "aliceCo/shared/capture",
        "node": {
          "catalogName": "aliceCo/shared/capture",
          "liveSpec": {
            "catalogType": "capture"
          },
          "userCapability": "read"
        }
      },
      {
        "cursor": "aliceCo/shared/disabled",
        "node": {
          "catalogName": "aliceCo/shared/disabled",
          "liveSpec": {
            "catalogType": "capture"
          },
          "userCapability": "read"
        }
      },
      {
        "cursor": "aliceCo/shared/materialize",
        "node": {
          "catalogName": "aliceCo/shared/materialize",
          "liveSpec": {
            "catalogType": "materialization"
          },
          "userCapability": "read"
        }
      }
    ]
  },
  "collections": {
    "edges": [
      {
        "cursor": "aliceCo/shared/a",
        "node": {
          "catalogName": "aliceCo/shared/a",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "read"
                  }
                },
                {
                  "cursor": "bobCo/private/materialization",
                  "node": {
                    "catalogName": "bobCo/private/materialization",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            },
            "readsFrom": null,
            "writesTo": null,
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "read"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            }
          },
          "userCapability": "read"
        }
      },
      {
        "cursor": "aliceCo/shared/b",
        "node": {
          "catalogName": "aliceCo/shared/b",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "read"
                  }
                },
                {
                  "cursor": "bobCo/private/materialization",
                  "node": {
                    "catalogName": "bobCo/private/materialization",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            },
            "readsFrom": null,
            "writesTo": null,
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "read"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            }
          },
          "userCapability": "read"
        }
      },
      {
        "cursor": "aliceCo/shared/c",
        "node": {
          "catalogName": "aliceCo/shared/c",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "read"
                  }
                },
                {
                  "cursor": "bobCo/private/materialization",
                  "node": {
                    "catalogName": "bobCo/private/materialization",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            },
            "readsFrom": null,
            "writesTo": null,
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "read"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "read"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            }
          },
          "userCapability": "read"
        }
      }
    ]
  }
}
