crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_by_name_alice.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "node": {
          "activeAlerts": null,
          "alertHistory": null,
          "catalogName": "aliceCo/private/capture",
          "liveSpec": null,
          "status": null,
          "userCapability": null
        }
      }
    ]
  }
}
