crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_by_name_alice_future_started_at.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
"GraphQL query failed with error: GraphQL errors: [ServerError { message: \"PermissionDenied: user@example.com is not authorized to access prefix or name 'aliceCo/private/capture' with required capability CatalogRead\", locations: [Pos(5:5)], path: [Field(\"liveSpecs\")], extensions: None }]"
